--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        kotlin_version = '1.5.31'
-        gradle_version = '7.0.3'
-        material_version = '1.4.0'
-        lifecycle_version = '2.3.1'
-        core_version = '1.6.0'
-        room_version = '2.3.0'
+        kotlin_version = "1.5.31"
+        gradle_version = "7.0.3"
+        material_version = "1.4.0"
+        lifecycle_version = "2.3.1"
+        core_version = "1.6.0"
+        room_version = "2.3.0"
         retrofit_version = "2.9.0"
         moshi_version = "1.12.0"
+        coroutine_version = "1.5.2"
     }
     repositories {
         google()
